# HW2_data_level_fusion_filters

./: CMakeLists.txt  README.md
results/: Aloe_window_3_errors.txt  Aloe_window_3_processing_time.txt  Aloe_window_5_errors.txt  Aloe_window_5_processing_time.txt  Aloe_window_7_errors.txt  Aloe_window_7_processing_time.txt  Art_window_3_errors.txt  Art_window_3_processing_time.txt  Art_window_5_errors.txt  Art_window_5_processing_time.txt  Art_window_7_errors.txt  Art_window_7_processing_time.txt  Baby1_window_3_errors.txt  Baby1_window_3_processing_time.txt  Baby1_window_5_errors.txt  Baby1_window_5_processing_time.txt  Baby1_window_7_errors.txt  Baby1_window_7_processing_time.txt  Books_window_3_errors.txt  Books_window_3_processing_time.txt  Books_window_5_errors.txt  Books_window_5_processing_time.txt  Books_window_7_errors.txt  Books_window_7_processing_time.txt  Bowling1_window_3_errors.txt  Bowling1_window_3_processing_time.txt  Bowling1_window_5_errors.txt  Bowling1_window_5_processing_time.txt  Bowling1_window_7_errors.txt  Bowling1_window_7_processing_time.txt  Dolls_window_3_errors.txt  Dolls_window_3_processing_time.txt  Dolls_window_5_errors.txt  Dolls_window_5_processing_time.txt  Dolls_window_7_errors.txt  Dolls_window_7_processing_time.txt  Flowerpots_window_3_errors.txt  Flowerpots_window_3_processing_time.txt  Flowerpots_window_5_errors.txt  Flowerpots_window_5_processing_time.txt  (+32 more)
results/sigma/: Aloe_window_7_sigma_0.010000_errors.txt  (+56 more)
src/: disparity2pc.cpp  evaluation.py  main.cpp  pclviewer.cpp  pclviewer.h  pclviewer.ui  python_utils.py
